--- a/index.HTML
+++ b/index.HTML
@@ -493,21 +493,27 @@ Responde en 1–3 frases.`,
       audio.play();
     });
   }
-  async function speakOpenAI(text){
-    const voice=pickOpenAIVoice();
-    try{
-      const r=await fetch('https://api.openai.com/v1/audio/speech',{
-        method:'POST',
-        headers:{'Authorization':'Bearer '+getKey(),'Content-Type':'application/json'},
-        body:JSON.stringify({model:'gpt-4o-mini-tts',voice,input:prosodiaNatural(text)})
-      });
-      if(!r.ok) throw new Error('TTS '+r.status);
-      const buf=await r.arrayBuffer(); const blob=new Blob([buf],{type:'audio/mpeg'});
-      const url=URL.createObjectURL(blob); await playWithFade(url,120); URL.revokeObjectURL(url);
-      return true;
-    }catch(e){ log(e); return false; }
+ async function speakOpenAI(text){
+  const voice = pickOpenAIVoice();
+  try {
+    const r = await fetch('/api/openaiChat', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({
+        model: 'gpt-4o-mini',
+        messages: [
+          { role: 'system', content: 'Eres un cliente virtual de práctica.' },
+          { role: 'user', content: text }
+        ]
+      })
+    });
+    const data = await r.json();
+    // Aquí continúa tu lógica para reproducir la respuesta o texto
+    console.log('Respuesta de IA:', data);
+  } catch(e){
+    console.error('Error en speakOpenAI:', e);
   }
-
+}
   /* Orquestador de voz (respeta motor + género) */
   async function hablar(text){
     const motor=selMotor.value; // auto/local/openai
@@ -832,5 +838,6 @@ Responde en 1–3 frases.`,
   </script>
 </body>
 </html>
+
 
 
