--- a/index.HTML
+++ b/index.HTML
@@ -545,11 +545,15 @@ Responde en 1–3 frases.`,
     try{
       const tag = rolActivado ? "[ROL_ACTIVADO]" : "[SIN_MOTIVO_AUN]";
       historial.push({role:'user',content:`${tag} Asesor: ${input}`});
-      const r=await fetch('https://api.openai.com/v1/chat/completions',{
-        method:'POST',
-        headers:{'Content-Type':'application/json','Authorization':'Bearer '+getKey()},
-        body:JSON.stringify({model:'gpt-4o-mini',messages:historial,stream:true,max_tokens:120,temperature:1.0,presence_penalty:0.2,frequency_penalty:0.1})
-      });
+      const r=await fetch('/api/openaiChat', {
+  method: 'POST',
+  headers: { 'Content-Type': 'application/json' },
+  body: JSON.stringify({
+    model: 'gpt-4o-mini',
+    messages: mensajes // (usa la variable que ya está en tu código)
+  })
+});
+
       if(r.status===429||r.status===401){ nextKey(); if(attempt<OPENAI_API_KEYS.length) return await respuestaClienteStream(input,attempt+1); }
       const reader=r.body.getReader(); const dec=new TextDecoder(); let buf=''; let done=false;
       while(!done){
@@ -838,6 +842,7 @@ Responde en 1–3 frases.`,
   </script>
 </body>
 </html>
+
 
 
 
